--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,18 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "4.3.1",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
+    "@vitejs/plugin-react": "4.3.1",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.38",
-    "typescript": "5.6.3",
     "tailwindcss": "3.4.10",
+    "typescript": "5.6.3",
     "vite": "5.4.8"
   }
 }
-
-
