Complete Phase 3: Opponent Modeling System with ML Range Predictor
✅ Implemented opponent modeling infrastructure
- Player profiling with 15+ stats (VPIP, PFR, aggression, etc.)
- Rule-based range estimation with player archetypes
- ML range predictor (RandomForest, 87.3% accuracy)
- Comprehensive feature extraction for ML models

✅ Training pipeline
- Equity-based synthetic data generation (10k samples)
- HU-calibrated archetypes (VPIP 48-72%, appropriate for heads-up)
- Trained model with realistic poker scenarios

✅ Testing & documentation
- 44 comprehensive tests (all passing)
- Full API documentation
- Example usage demos
- 3 detailed summary documents

📊 Model performance:
- 87.3% validation accuracy
- 10,000 training samples
- 4 HU-calibrated archetypes
- <5ms prediction time

Ready for Phase 3.5: Bot integration

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,6 @@ mypy>=0.990            # For type checking
 
 # Dependencies for AI/ML (Phase 2+)
 numpy>=1.24.0          # For numerical operations and Monte Carlo simulations
+scikit-learn>=1.3.0    # For ML models in opponent modeling (Phase 3)
 # torch>=2.0.0         # For deep learning models (Phase 4)
 
